css/style.css
/*.jumbotron {
    margin-bottom: 0px;
    background-position: 0% 25%;
    background-size: cover;
    background-repeat: no-repeat;
}*/
html, body{
	height: 100%;
    margin: 0;
}

.section {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.row{
    display: flex;
    justify-content: center;
}

.intro{
	background-image: url(img/peabody_original_2.jpg);
	background-position: 0% 25%; /*zooms in to the image*/
	color: white;
    background-size: cover; /*center bg image?*/
	text-align: center;
}

.introban{
   background-color: #c36c25;
    padding: 30px;
}

.intro h1{
	font-family: "PT Sans Narrow", sans-serif;
	font-weight: 700;
	letter-spacing: 2px;
	font-size: 75px;
    margin: 0;
}

.intro h2{
	font-family: "Inconsolata", monospace;
	font-size: 150%;
    margin: 0;
    bix-sizing: border-box;
}

.intro .container{
	display: flex;
    flex-direction: column;
    justify-content: center;

}


/*body for narrative and explanation sections*/
.narrative, .explanation, .credits{
	font-family: "PT Sans", sans-serif;
	font-weight: 400;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: webkit-flex;
    display: flex;
    align-items: center
    justify-content: center;
}

.explanation .col-md-4 {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 15px;
}

.interactive .col-md-6 {
    min-width: 552px;
}

#cheatbreak{
    border-bottom: 10px gray;
}


#viewGrid {
    margin: 0 auto;
    min-width: 522px;
}

#viewsvg {
    display: block;
    margin: auto;
}

#compareGrid {
    margin: 0 auto;
    min-width: 522px;
}


/*body for interactive pages*/
.interactive{
	font-family: "Inconsolata", monospace;

}

/*headers for all of the pages*/
.narrative h2, .explanation h2, .interactive h2, .credits h2{
	font-family: "PT Sans Narrow", sans-serif;
	font-weight: 400;
	text-align: center;
	font-size: 600%;
}


h3 {
	text-align: center;
    font-family: "PT Sans Narrow", sans-serif;
    font-weight: lighter;
    color: gray;
/*    font-size: 100%;
*/}

/*font for narrative pages*/
.narrative{
	color:white; /*change to white when solid background*/
    font-size: 115%;
    padding-top: 3%;
    padding-bottom: 3%;

}

.narrative p{
	font-size: larger;
}

#eventKey{
    padding: 0;

}

#history{
	background-color: #8D2B1D; /*red*/
}

#works{
    padding-top: 10%;
    padding-bottom: 5%;
}

#view{
    padding-bottom: 5%;
}

#interaction{
	background-color: #2B4461; /*blue*/
}

#build{
    padding-top: 10%;
    padding-bottom: 5%;
}

#timeline{
    padding-bottom: 15%;
}

#compare{
/*    padding-top: 10%;
    padding-bottom: 15%;*/
	background-color: #458867; /*green*/
}

#compare2{
    padding-top: 10%;
    padding-bottom: 15%;
}

#credits{
    padding-top: 3%;
    padding-bottom: 3%;
	background-color: lightgray;
}


.highlight{
	background-color: yellow;
	font-weight: 700;
}

.axis line, .axis path { /* timeline axis */
	fill: none;
	stroke: black;

}

.interactive{
	font-size: smaller;
}

.buildType:hover{
	outline: 3px solid lightblue;
}

.highlightSquare{
	stroke: yellow;
    stroke-width: 5px;
}

.timelineRect{
    visibility: visible;
}

.tester{
	fill:blue;stroke:pink;stroke-width:5;opacity:0.5;
}

.buildSquare:hover{
	cursor:pointer;s
}
#buildList {
	background-color: #F3F3F3;
	padding-top:10px;
	padding-bottom: 10px;
	padding-left: 2em;
}
#eventsNavigation{
	text-align: center;
	font-size: 1.5em;
	-webkit-user-select: none; /* webkit (safari, chrome) browsers */
	-moz-user-select: none; /* mozilla browsers */
	-khtml-user-select: none; /* webkit (konqueror) browsers */
	-ms-user-select: none; /* IE10+ */
}

.row{
	margin-left: 0;
	margin-right: 0;
}

#currentYr{

}

#currentBuildEvent{

}

#buildList p{
	margin-right: 10px;
	font-size: 1.7em;
	text-align: left;
	min-height:3em;
	display:inline-block;;
}
.selectedColor{
	stroke-width:3;
	stroke:#F7DE65;
}
.nextPrevButtons:hover{
	cursor: pointer;
}
#eventCounter{
	font-style: italic;
	display:inline-block;
	width:2.5em;
}
#show-hide{
	font-size: .7em;
}
#show-hide:hover{
	cursor: pointer;
}

.corIncor{
	width: 30px;
	height: 30px;
	position: relative;
	top:-3px;
}

.colorBox{
	cursor: pointer;
}

/***************************CAROUSEL (for how it works) STYLING****************************/


/*remove gradient from bootstrap carousel*/
.carousel-control.left, .carousel-control.right {
    background-image: none;
    top: -100px;
}


.carousel-control{
  color:black;
}

.carousel-control:hover, .carousel-control:focus{
  color:black;
}


/*if white bg*/
.carousel-indicators li{
  background-color:white;
  border-color:black;
}
.carousel-indicators .active{
  background-color:black;
  border-color: white;
}

img.carousel{
/*    width: 50%;
*/}


.carousel-inner>.item>img, .carousel-inner>.item>a>img {
    display: block;
    height: auto;
    max-width: 100%;
    line-height: 1;
    width: 60%;
    margin: auto;
}

